examples/bad/hold_continue_outer.mko
// EXPECT: use of moved
// Labeled continue outer: move before continue poisons outer next-iter / exit.
fn consume(t: string) {}

fn main() {
    hold let s = "hi"
    let mut i = 0
    outer: while i < 3 {
        i = i + 1
        let mut j = 0
        while j < 2 {
            j = j + 1
            if i < 3 {
                consume(s)
                continue outer
            }
            break
        }
    }
    print(s)
}
